再次嘗試在VScode操作

--- a/因應團隊專案資料補遺/評價爬取.ipynb
+++ b/因應團隊專案資料補遺/評價爬取.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -32,59 +32,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Unnamed: 0.1  Unnamed: 0   ID     shopName        shopAddress  \\\n",
-      "0               0           0    0  千手千眼觀世音菩薩聖像    新北市淡水區頂田寮路1000號   \n",
-      "1               1           1    1     康誥坑溪櫻花大道    新北市汐止區水源路一段246號   \n",
-      "2               2           2    2      玩聚窩玩具銀行             新北市板橋區   \n",
-      "3               3           3    3   烏來龍門精緻溫泉民宿      新北市烏來區溫泉街116號   \n",
-      "4               4           4    4      世界宗教博物館  新北市永和區中山路一段236號7樓   \n",
-      "..            ...         ...  ...          ...                ...   \n",
-      "192           192         192  192        汪汪地瓜園      新北市金山區六股林口74號   \n",
-      "193           193         193  193    新北市立黃金博物館        新北市瑞芳區金光路8號   \n",
-      "194           194         194  194    板橋435藝文特區      新北市板橋區中正路435號   \n",
-      "195           195         195  195        老梅綠石槽    石門(2號省道26.3公里處)   \n",
-      "196           196         196  196      台灣玩具博物館      新北市板橋區中正路435號   \n",
+      "     Unnamed: 0.1  Unnamed: 0   ID            shopName  \\\n",
+      "0               0           0    0               紫明溪步道   \n",
+      "1               1           1    1           冷水坑公共溫泉浴室   \n",
+      "2               2           2    2  中國信託文薈館CTBC Museum   \n",
+      "3               3           3    3                大湖公園   \n",
+      "4               4           4    4                和興炭坑   \n",
+      "..            ...         ...  ...                 ...   \n",
+      "150           150         150  150     璐露野生活Luluyelife   \n",
+      "151           151         151  151          花博公園（新生園區）   \n",
+      "152           152         152  152             劍潭山親山步道   \n",
+      "153           153         153  153            臺北市兒童新樂園   \n",
+      "154           154         154  154      華山1914文化創意產業園區   \n",
       "\n",
-      "        shopPhone                                          shopHours  \\\n",
-      "0    02-2626-9242                             週六、日10：00～16：00（週一至五休）   \n",
-      "1    02-2626-9242                                             24小時開放   \n",
-      "2    0966-715-322  週三、六、日09：00～12：00、14：00～17：00（週一及國定假日休，週二、四、五僅...   \n",
-      "3    02-2661-8187                                    周一至日09：00～00：00   \n",
-      "4    02-8231-6118                               週二至日10：00～17：00（週一休）   \n",
-      "..            ...                                                ...   \n",
-      "192  0961-555-515               週二～五09：30～17：00／週六、日09：30～19：00（週一休）   \n",
-      "193  02-2496-2800  週一至五09：30～17：00／週六、日09：30～18：00 （每月第一個週一、除夕、大年...   \n",
-      "194  02-2969-0366                    週一至五09：00～17：00／週六、日09：00～18：00   \n",
-      "195  02-2969-0366                                                無資料   \n",
-      "196  0917-567-617                               週二至日10：00～17：00（週一休）   \n",
+      "                        shopAddress          shopPhone  \\\n",
+      "0            台北市北投區中興路12號附近（陽明書屋附近）       02-2759-3001   \n",
+      "1                 台北市士林區菁山路101巷175號       02-2861-0036   \n",
+      "2    台北市南港區經貿二路168號1樓（中國信託金融園區A棟1樓）  02-3327-7777#1099   \n",
+      "3                    台北市內湖區成功路五段31號  02-3327-7777#1099   \n",
+      "4               台北市信義區信義路五段150巷471弄       02-2759-3001   \n",
+      "..                              ...                ...   \n",
+      "150             台北市大安區光復南路420巷20號1樓       02-2707-5252   \n",
+      "151                台北市中山區新生北路三段105號       02-2585-0192   \n",
+      "152            台北市中山區中山北路四段71巷2弄69號       02-2759-3001   \n",
+      "153                  台北市士林區承德路五段55號       02-2181-2345   \n",
+      "154                   台北市中正區八德路一段1號       02-2358-1914   \n",
+      "\n",
+      "                                             shopHours  \\\n",
+      "0                                               24小時開放   \n",
+      "1    週二至日06：00～08：30、10：00～12：30、14：00～16：30、18：00～...   \n",
+      "2                                 週二至日11：00～17：30（週一休）   \n",
+      "3                                               24小時開放   \n",
+      "4                                      週一至日09：00～17：00   \n",
+      "..                                                 ...   \n",
+      "150                                    週一至日09：00～18：00   \n",
+      "151                                             24小時開放   \n",
+      "152                                             24小時開放   \n",
+      "153          週二至五09：00～17：00／週六、日09：00～18：00（週一休，非寒暑假）   \n",
+      "154                                    24小時開放（依現場公告為主）   \n",
       "\n",
       "                                             shopPhoto  \n",
-      "0    f574bd44.jpg \\n e64a849e.jpg \\n 9919115b.jpg \\...  \n",
-      "1    dec31151.jpg \\n b5f98981.jpg \\n 8a995581.jpg \\...  \n",
-      "2    c6a8acc0.jpg \\n c31ed92f.jpg \\n 78f15969.jpg \\...  \n",
-      "3    06277711.jpg \\n 3268c72b.jpg \\n e63335bc.jpg \\...  \n",
-      "4    3ab77b87.jpg \\n 363bf8d1.jpg \\n d6b6bd5b.jpg \\...  \n",
+      "0    093f0a5d.jpg \\n 71a97dc8.jpg \\n bd396b43.jpg \\...  \n",
+      "1    9cc7ae53.jpg \\n a6fd224c.jpg \\n 8111757c.jpg \\...  \n",
+      "2    659c98e5.jpg \\n 83e1b38d.jpg \\n 24c0f290.jpg \\...  \n",
+      "3    e608fa4e.jpg \\n 8ebb6ca2.jpg \\n 13e813b9.jpg \\...  \n",
+      "4    0825053e.jpg \\n edf45ca7.jpg \\n 15f09961.jpg \\...  \n",
       "..                                                 ...  \n",
-      "192  21fe83e7.jpg \\n 77b228c6.jpg \\n 2a47c554.jpg \\...  \n",
-      "193  5bf6d213.jpg \\n 565f51c6.jpg \\n 797dfab0.jpg \\...  \n",
-      "194                                       7abd652c.jpg  \n",
-      "195                                       1e8822f0.jpg  \n",
-      "196  2b97a602.jpg \\n a854f4f2.jpg \\n 7d21288d.jpg \\...  \n",
+      "150  b0342549.jpg \\n f7d4060e.jpg \\n c5e5898f.jpg \\...  \n",
+      "151       3b87489a.jpg \\n 7928dcfd.jpg \\n e370ade7.jpg  \n",
+      "152  e5fb701a.jpg \\n 2c1ce6b5.jpg \\n 60332644.jpg \\...  \n",
+      "153  ad1a9807.jpg \\n 94168796.jpg \\n ab2ccfe7.jpg \\...  \n",
+      "154  f86428f2.jpg \\n c18f8537.jpg \\n efb5f50b.jpg \\...  \n",
       "\n",
-      "[197 rows x 8 columns]\n"
+      "[155 rows x 8 columns]\n"
      ]
     }
    ],
    "source": [
     "url = \"https://www.google.com/maps/\"\n",
-    "# datas = pd.read_csv(\"Taipei_to_hots_copy1.csv\", encoding = \"utf-8-sig\")\n",
-    "datas = pd.read_csv(\"NewTaipei_to_hots_copy1.csv\", encoding = \"utf-8-sig\")\n",
+    "datas = pd.read_csv(\"Taipei_to_hots_copy1.csv\", encoding = \"utf-8-sig\")\n",
+    "# datas = pd.read_csv(\"NewTaipei_to_hots_copy1.csv\", encoding = \"utf-8-sig\")\n",
     "print(datas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +129,7 @@
     "    elif \"RZ66Rb\" in str(chrome.page_source):\n",
     "        time.sleep(0.5)\n",
     "    soup = BeautifulSoup(chrome.page_source, \"html.parser\") \n",
-    "    com_list = []\n",
+    "    com_list = [name]\n",
     "    if \"Gpq6kf fontTitleSmall\" in str(chrome.page_source):\n",
     "        try:\n",
     "            try:\n",
@@ -206,7 +219,6 @@
     "        comments = soup2.find_all(\"div\", class_ = \"jftiEf fontBodyMedium\")\n",
     "        chrome.quit()\n",
     "        print(name + \"SuccessFul!\")\n",
-    "        com_list = []\n",
     "        for com in comments:\n",
     "            if \"wiI7pd\" in str(com):\n",
     "                com_list.extend([\"姓名: \" + com.find(class_ = \"d4r55\").text, \"評論: \" + com.find(\"span\", class_ = \"wiI7pd\").text])\n",
@@ -262,57 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20\n",
-      "                                                    0\n",
-      "0                                     姓名: Jimmy Chang\n",
-      "1   評論: 在山坡之中竟藏著一座千手觀音佛像！但佛像部分仍未完工，僅開放六、日及國定假日可以進入...\n",
-      "2                                              姓名: 依娜\n",
-      "3   評論: 終於有緣份進來看千手觀音神像了，這工程太耗大到現在還在蓋，大殿可以進去參觀拍照，牆四...\n",
-      "4                                      姓名: Steven Hsu\n",
-      "5   評論: 一個令人驚嘆又讓人感受非常舒服的地方，在金氏世界紀錄的見證，雄偉觀音菩薩聖像在陽光照...\n",
-      "6                                             姓名: 尋路犬\n",
-      "7   評論: 清境素雅的佛寺，金世界紀錄鋼製坐姿千手觀音，路過終於好奇來參觀，真的很大。有震撼感，...\n",
-      "8                                       姓名: Franco Li\n",
-      "9   評論: 莊嚴神聖的千手千眼觀世音菩薩 聖像，而且還是列入金氏世界紀錄，最大鋼製雕塑。\\n這裡...\n",
-      "10                                            姓名: 沈伯宇\n",
-      "11  評論: 世界目前最大觀音像，不用門票，廟方免費停車位置有限，附近有停車場是私人的，就要收費了...\n",
-      "12                                             姓名: 隨風\n",
-      "13  評論: 2022年一直想到這邊參拜~經歷了一年多~\\n2024終於很榮幸有機會來到，\\n雖然...\n",
-      "14                                   姓名: Winson Chang\n",
-      "15  評論: 多年來一直關注著這「千手千眼觀世音菩薩」的銅像興建進度，如今已大致完成也開放參觀多時...\n",
-      "16                                             姓名: 綺穗\n",
-      "17  評論: 觀音法相莊嚴，只假日開放參拜。\\n園區未完工，行動安全要注意。上香的香氣與平常寺廟不...\n",
-      "18                                            姓名: 閻瑞彥\n",
-      "19  評論: 莊嚴的道場 志工熱心招待説明，修行供養與傳統有別，大殿還在建設中，一樓有畫展是用AI...\n",
-      "20                                            姓名: 周古麗\n",
-      "21            評論: 服務人員很熱心在介紹 未來千手觀音菩薩會如何成現 需經費 目前無完工日\n",
-      "22                                            姓名: 連佳萍\n",
-      "23  評論: 淡水千手觀音聖像榮獲「金氏世界紀錄」認證，號稱全世界最大的鋼製雕朔，宏偉壯觀、大器莊...\n",
-      "24                                     姓名: BigWofe Lu\n",
-      "25  評論: 目前因施工關係只開放假日參觀，有專屬免費停車場，如果平日前往只能在外圍拍照，可以順便...\n",
-      "26                                      姓名: HsuPingli\n",
-      "27                  評論: 無比莊嚴殊勝的千手觀音佛像，為世界最大剛製雕塑紀錄保持者。\n",
-      "28                                         姓名: Echo H\n",
-      "29  評論: 2023農曆過年期間來參拜，竟然還有特別的畫展！感覺一度很像走到高級藝廊！二樓有期間...\n",
-      "30                                       姓名: elva sun\n",
-      "31             評論: 2023/05/01\\n全台最大的千手觀音\\n喜歡這個非常寧靜的地方\n",
-      "32                                            姓名: マサミ\n",
-      "33  評論: 因為很早到園區、所以只有在外面拍攝、六日才有開放參觀，還在建設中、期待完工之後再來，...\n",
-      "34                                    姓名: Chiaos Chen\n",
-      "35  評論: 園區已興建多年，千手千眼觀音的銅像已大致完成還獲得金氏世界紀錄，位於半山上環境很清幽...\n",
-      "36                                         姓名: Chen禎祥\n",
-      "37                      評論: 只有週末跟國定假日10-16開放別跟我一樣白跑一趟\n",
-      "38                                            姓名: 張丰魁\n",
-      "39  評論: 藝術究竟是什麼？\\n獲得金氏世界紀錄的千手千眼觀世音菩薩聖像在今年的過年期間，將室內...\n"
+      "name 'chrome' is not defined\n"
      ]
     }
    ],
@@ -384,7 +353,7 @@
     "    print(len(comments))\n",
     "    chrome.quit()\n",
     "#     print(comments)\n",
-    "    com_list = []\n",
+    "    com_list = [name]\n",
     "    for com in comments:\n",
     "        if \"wiI7pd\" in str(com):\n",
     "            com_list.extend([\"姓名: \" + com.find(class_ = \"d4r55\").text, \"評論: \" + com.find(\"span\", class_ = \"wiI7pd\").text])\n",
